<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".studentlogin"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:padding="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adlogin"
            android:textColor="#fff"
            android:textSize="32sp" />

        <TextView
            android:layout_margin="15dp"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:text="@string/adminwelcome"
            android:textColor="#fff"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/adminpolicy"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/buttonstylepink"
                android:text="@string/learn_more"
                android:textColor="#fff" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/admin_name"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_text_style"
            android:drawableLeft="@drawable/ic_person_outline_blak_24dp"
            android:hint="@string/username"
            android:padding="10dp" />

        <EditText
            android:id="@+id/admin_pass"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_style"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/admin_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/buttonstylenewpink"
            android:drawableRight="@drawable/ic_send_black_24dp"
            android:text="Login"
            android:textColor="#fff" />
    </LinearLayout>

    <include
        layout="@layout/content_studentlogin"
        android:layout_width="match_parent"
        android:layout_height="323dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />

</LinearLayout>