<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".studentlogin"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:padding="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogin"
            android:textColor="#fff"
            android:textSize="40sp" />

        <TextView
            android:layout_margin="15dp"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="#fff"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/placementpolicy"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/buttonstylepink"
                android:text="@string/learn_more"
                android:textColor="#fff" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_marginTop="40dp"
            android:id="@+id/login_mail"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_style"
            android:drawableLeft="@drawable/ic_person_outline_blak_24dp"
            android:hint="Email"
            android:padding="10dp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_style"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:padding="10dp" />


        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Forgot Password?"
            android:gravity="right"
            android:layout_marginRight="15dp"
            android:layout_marginTop="7dp"/>
        <Button
            android:id="@+id/login_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/buttonstylenewpink"
            android:drawableRight="@drawable/ic_send_black_24dp"
            android:text="Login"
            android:textColor="#fff" />
        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Register Here"
            android:textAlignment="center"
            android:layout_marginTop="15dp"/>

    </LinearLayout>



        </LinearLayout>
    </ScrollView>



</LinearLayout>